flapivor/tests/m3/hopix/typechecker/good/38-pattern-matching-02.hopix
type T = T

val t : T = case T<> { (x : T) => x }
