flapivor/tests/m3/hopix/typechecker/bad/35-record-matching-02.hopix
type T = { x : Int }

val main : String = case { x = 0 }<> { { x = (y : String) }<> => y }